--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -220,22 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/init.py:86: UserWarning: The uniform initializer no longer uses Glorot et al.'s approach to determine the bounds, but defaults to the range (-0.01, 0.01) instead. Please use the new GlorotUniform initializer to get the old behavior. GlorotUniform is now the default for all layers.\n",
-      "  warnings.warn(\"The uniform initializer no longer uses Glorot et al.'s \"\n",
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/layers/helper.py:69: UserWarning: get_all_layers() has been changed to return layers in topological order. The former implementation is still available as get_all_layers_old(), but will be removed before the first release of Lasagne. To ignore this warning, use `warnings.filterwarnings('ignore', '.*topo.*')`.\n",
-      "  warnings.warn(\"get_all_layers() has been changed to return layers in \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class SentimentExp(object):\n",
     "    \n",
@@ -273,31 +262,32 @@
     "        self.embedding_l = EmbeddingLayer(\n",
     "            self.input_l,\n",
     "            W=self.wordvecs.get_numpy_matrix(),\n",
-    "            add_word_params=False,\n",
+    "            add_word_params=True,\n",
     "        ) \n",
     "        \n",
     "        self.first_l = lasagne.layers.Conv2DLayer(\n",
     "            self.embedding_l,\n",
-    "            num_filters=100,\n",
+    "            num_filters=80,\n",
     "            filter_size=(2, self.wordvecs.vector_size),\n",
     "            name='conv1',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
     "        )\n",
     "        \n",
-    "        self.first_l_max_old = lasagne.layers.MaxPool2DLayer(\n",
+    "        self.first_l_max = lasagne.layers.Pool2DLayer(\n",
     "            self.first_l,\n",
     "            name='maxing1',\n",
-    "            pool_size=(1,1)  # the number 9 should be 50-1 since that would mean it maxes over the whole input....\n",
+    "            pool_size=(49,1),  # the number 9 should be 50-1 since that would mean it maxes over the whole input....\n",
+    "            mode='max',\n",
     "        )\n",
     "        \n",
-    "        self.first_l_max = SimpleMaxingLayer(\n",
+    "        self.first_l_max_simple = SimpleMaxingLayer(\n",
     "            self.first_l,\n",
     "            name='maxing1',\n",
     "        )\n",
     "        \n",
     "        self.hidden1_l = lasagne.layers.DenseLayer(\n",
     "            self.first_l_max,\n",
-    "            num_units=50,\n",
+    "            num_units=40,\n",
     "            name='dens1',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
     "        )\n",
@@ -305,25 +295,40 @@
     "        self.hidden1_l_drop = lasagne.layers.DropoutLayer(\n",
     "            self.hidden1_l,\n",
     "            name='drop1',\n",
+    "            p=.5,\n",
+    "        )\n",
+    "        \n",
+    "        self.hidden2_l = lasagne.layers.DenseLayer(\n",
+    "            self.hidden1_l_drop,\n",
+    "            num_units=15,\n",
+    "            name='dens2',\n",
+    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "        )\n",
+    "        \n",
+    "        self.hidden2_l_drop = lasagne.layers.DropoutLayer(\n",
+    "            self.hidden2_l,\n",
+    "            name='drop2',\n",
     "            p=.25,\n",
     "        )\n",
     "        \n",
     "        self.out_l = lasagne.layers.DenseLayer(\n",
     "            self.hidden1_l_drop,\n",
     "            num_units=1,\n",
-    "            name='dens2',\n",
+    "            name='dens3',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
     "        )\n",
     "        \n",
     "        self.output = lasagne.layers.get_output(self.out_l, self.x_batch)\n",
     "        \n",
     "        self.loss_vec_old = (self.output.reshape((self.output.size,)) - self.y_batch) ** 2\n",
-    "        self.output_diff = T.neq((self.output.flatten() > .5),(self.y_batch > .5)).sum()\n",
+    "        self.output_diff = T.neq((self.output.flatten() > .5),(self.y_batch > .5))\n",
     "        self.loss_vec = lasagne.objectives.binary_crossentropy(T.clip(self.output.reshape((self.output.size,)), .01, .99), self.y_batch)\n",
+    "        \n",
+    "        self.loss_val = T.dot(self.loss_vec, self.output_diff)\n",
     "        \n",
     "        self.all_params = lasagne.layers.get_all_params(self.out_l)\n",
     "        \n",
-    "        self.updates = lasagne.updates.adagrad(self.loss_vec.mean(), self.all_params, .005)\n",
+    "        self.updates = lasagne.updates.adagrad(self.loss_val, self.all_params, .001)\n",
     "        #self.updates = lasagne.updates.apply_momentum(self.updates_adagrad)\n",
     "        \n",
     "        self.train_func = theano.function(\n",
@@ -334,7 +339,7 @@
     "        \n",
     "        self.loss_func = theano.function(\n",
     "            [self.x_batch, self.y_batch],\n",
-    "            [self.loss_vec.sum(), self.loss_vec, self.output_diff],\n",
+    "            [self.loss_vec.sum(), self.loss_vec, self.output_diff.sum()],\n",
     "        )\n",
     "        \n",
     "    def _make_zero(self):\n",
@@ -370,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -378,10 +383,10 @@
     {
      "data": {
       "text/plain": [
-       "[conv1.W, conv1.b, dens1.W, dens1.b, dens2.W, dens2.b]"
+       "[Embeddings, conv1.W, conv1.b, dens1.W, dens1.b, dens3.W, dens3.b]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.93582451408386969, 0.22975187265917604) (1.1171855369480448, 0.27520435967302453) (0.97624973693071981, 0.24253393665158371)\n"
+      "(0.94516480938609315, 0.22975187265917604) (1.1210415627551737, 0.27520435967302453) (0.98793939293940025, 0.24253393665158371)\n"
      ]
     }
    ],
@@ -411,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -420,48 +425,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 (0.94509708226262634, 0.22975187265917604) "
+      "(9, (0.61890593660937065, 0.2731741573033708), (0.66302997196318336, 0.38510445049954589))\n",
+      "(19, (0.59905316823446575, 0.2247191011235955), (0.65877878242446353, 0.36784741144414168))\n",
+      "(29, (0.58898645997067434, 0.18761704119850187), (0.65519232288619911, 0.37148047229791098))\n",
+      "(39, (0.57921442715922844, 0.16982677902621723), (0.66763269934807135, 0.37420526793823794))\n",
+      "(49, (0.56708638114222465, 0.1408005617977528), (0.65835189129929028, 0.38601271571298817))\n"
      ]
     }
    ],
    "source": [
-    "for i in xrange(140):\n",
-    "    if i % 15 == 0:\n",
-    "        print i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)\n",
+    "p_res = []\n",
+    "\n",
+    "for i in xrange(50):\n",
+    "    if i % 10 == 9:\n",
+    "        r = i, experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)\n",
+    "        p_res.append(r)\n",
+    "        print r\n",
     "    experiment.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.56215729250109614, 0.14173689138576778)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.train_X, sentiment.train_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.65719801928959309, 0.35240690281562215)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.dev_X, sentiment.dev_Y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.64638981333090362, 0.3357466063348416)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9,\n",
+       "  (0.61890593660937065, 0.2731741573033708),\n",
+       "  (0.66302997196318336, 0.38510445049954589)),\n",
+       " (19,\n",
+       "  (0.59905316823446575, 0.2247191011235955),\n",
+       "  (0.65877878242446353, 0.36784741144414168)),\n",
+       " (29,\n",
+       "  (0.58898645997067434, 0.18761704119850187),\n",
+       "  (0.65519232288619911, 0.37148047229791098)),\n",
+       " (39,\n",
+       "  (0.57921442715922844, 0.16982677902621723),\n",
+       "  (0.66763269934807135, 0.37420526793823794)),\n",
+       " (49,\n",
+       "  (0.56708638114222465, 0.1408005617977528),\n",
+       "  (0.65835189129929028, 0.38601271571298817))]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_res"
    ]
   },
   {
@@ -488,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -506,13 +588,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 80, 1, 1)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_func2(np.array(experiment.train_X_rep[0:1]).astype('int32'))[2].shape"
+    "test_func2(np.array(experiment.train_X_rep[0:1]).astype('int32'))[1].shape"
    ]
   },
   {
