going to try changing the learning rate to see if it works better on stanford data

--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -256,25 +256,45 @@
     "    def _setup(self):\n",
     "        self.x_batch = T.imatrix('x')\n",
     "        self.y_batch = T.ivector('y')\n",
+    "        self.learning_rate = T.scalar('learning_rate')\n",
     "        \n",
     "        self.input_l = lasagne.layers.InputLayer((None, 50))\n",
     "        \n",
     "        self.embedding_l = EmbeddingLayer(\n",
     "            self.input_l,\n",
     "            W=self.wordvecs.get_numpy_matrix(),\n",
-    "            add_word_params=True,\n",
+    "            add_word_params=False,\n",
     "        ) \n",
     "        \n",
     "        self.first_l = lasagne.layers.Conv2DLayer(\n",
     "            self.embedding_l,\n",
-    "            num_filters=80,\n",
+    "            num_filters=100,\n",
     "            filter_size=(2, self.wordvecs.vector_size),\n",
     "            name='conv1',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
     "        )\n",
     "        \n",
+    "        self.first_l_conv = [\n",
+    "            lasagne.layers.Conv2DLayer(\n",
+    "                self.embedding_l,\n",
+    "                num_filters=100,\n",
+    "                filter_size=(i, self.wordvecs.vector_size),\n",
+    "                name='conv1.{}'.format(i),\n",
+    "                nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            ) for i in xrange(2, 5)\n",
+    "        ]\n",
+    "        \n",
+    "        self.first_l_s = [\n",
+    "            lasagne.layers.PadLayer(self.first_l_conv[i], width=(0,(i,0), 0), batch_ndim=1) for i in xrange(len(self.first_l_conv))\n",
+    "        ]\n",
+    "        \n",
+    "        self.first_l_merge = lasagne.layers.ConcatLayer(\n",
+    "            self.first_l_s,\n",
+    "            axis=3,\n",
+    "        )\n",
+    "        \n",
     "        self.first_l_max = lasagne.layers.Pool2DLayer(\n",
-    "            self.first_l,\n",
+    "            self.first_l_merge,\n",
     "            name='maxing1',\n",
     "            pool_size=(49,1),  # the number 9 should be 50-1 since that would mean it maxes over the whole input....\n",
     "            mode='max',\n",
@@ -295,7 +315,7 @@
     "        self.hidden1_l_drop = lasagne.layers.DropoutLayer(\n",
     "            self.hidden1_l,\n",
     "            name='drop1',\n",
-    "            p=.5,\n",
+    "            p=.25,\n",
     "        )\n",
     "        \n",
     "        self.hidden2_l = lasagne.layers.DenseLayer(\n",
@@ -328,7 +348,7 @@
     "        \n",
     "        self.all_params = lasagne.layers.get_all_params(self.out_l)\n",
     "        \n",
-    "        self.updates = lasagne.updates.adagrad(self.loss_val, self.all_params, .001)\n",
+    "        self.updates = lasagne.updates.adagrad(self.loss_val, self.all_params, self.learning_rate)\n",
     "        #self.updates = lasagne.updates.apply_momentum(self.updates_adagrad)\n",
     "        \n",
     "        self.train_func = theano.function(\n",
@@ -375,7 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_func3 = theano.function([experiment.x_batch], [\n",
+    "        lasagne.layers.get_output(experiment.first_l_merge, experiment.x_batch),\n",
+    "        lasagne.layers.get_output(experiment.first_l_s[2], experiment.x_batch),\n",
+    "        lasagne.layers.get_output(experiment.first_l_conv[2], experiment.x_batch),\n",
+    "        lasagne.layers.get_output(experiment.first_l_max, experiment.x_batch)\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -383,10 +419,41 @@
     {
      "data": {
       "text/plain": [
-       "[Embeddings, conv1.W, conv1.b, dens1.W, dens1.b, dens3.W, dens3.b]"
+       "(1, 80, 1, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_func3(np.array(experiment.train_X_rep[0:1]).astype('int32'))[3].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[conv1.2.W,\n",
+       " conv1.2.b,\n",
+       " conv1.3.W,\n",
+       " conv1.3.b,\n",
+       " conv1.4.W,\n",
+       " conv1.4.b,\n",
+       " dens1.W,\n",
+       " dens1.b,\n",
+       " dens3.W,\n",
+       " dens3.b]"
+      ]
+     },
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +473,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.94516480938609315, 0.22975187265917604) (1.1210415627551737, 0.27520435967302453) (0.98793939293940025, 0.24253393665158371)\n"
+      "(1.0606681182628814, 0.22975187265917604) (1.2688564461359229, 0.27520435967302453) (1.120131724683243, 0.24253393665158371)\n"
      ]
     }
    ],
@@ -416,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
@@ -425,11 +492,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9, (0.61890593660937065, 0.2731741573033708), (0.66302997196318336, 0.38510445049954589))\n",
-      "(19, (0.59905316823446575, 0.2247191011235955), (0.65877878242446353, 0.36784741144414168))\n",
-      "(29, (0.58898645997067434, 0.18761704119850187), (0.65519232288619911, 0.37148047229791098))\n",
-      "(39, (0.57921442715922844, 0.16982677902621723), (0.66763269934807135, 0.37420526793823794))\n",
-      "(49, (0.56708638114222465, 0.1408005617977528), (0.65835189129929028, 0.38601271571298817))\n"
+      "(9, (0.62813345550790067, 0.20880149812734083), (0.67647587785555863, 0.39963669391462309))\n",
+      "(19, (0.5889986119092171, 0.098548689138576784), (0.66129864450633868, 0.34059945504087191))\n",
+      "(29, (0.58050994469403605, 0.076076779026217234), (0.6594850806378586, 0.34604904632152589))\n",
+      "(39, (0.57498347451479503, 0.059339887640449437), (0.66450718122265284, 0.36784741144414168))\n",
+      "(49, (0.56496353413845524, 0.048923220973782773), (0.65934541023835003, 0.34241598546775659))\n"
      ]
     }
    ],
