--- a/sentiment_exp3.ipynb
+++ b/sentiment_exp3.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -256,14 +256,14 @@
     "    def _setup(self):\n",
     "        self.x_batch = T.imatrix('x')\n",
     "        self.y_batch = T.ivector('y')\n",
-    "        self.learning_rate = T.scalar('learning_rate')\n",
+    "        self.learning_rate_var = T.scalar('learning_rate')\n",
     "        \n",
     "        self.input_l = lasagne.layers.InputLayer((None, 50))\n",
     "        \n",
     "        self.embedding_l = EmbeddingLayer(\n",
     "            self.input_l,\n",
     "            W=self.wordvecs.get_numpy_matrix(),\n",
-    "            add_word_params=False,\n",
+    "            add_word_params=True,\n",
     "        ) \n",
     "        \n",
     "        self.first_l = lasagne.layers.Conv2DLayer(\n",
@@ -271,7 +271,7 @@
     "            num_filters=100,\n",
     "            filter_size=(2, self.wordvecs.vector_size),\n",
     "            name='conv1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.rectify,\n",
     "        )\n",
     "        \n",
     "        self.first_l_conv = [\n",
@@ -280,7 +280,7 @@
     "                num_filters=100,\n",
     "                filter_size=(i, self.wordvecs.vector_size),\n",
     "                name='conv1.{}'.format(i),\n",
-    "                nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "                nonlinearity=lasagne.nonlinearities.rectify,\n",
     "            ) for i in xrange(2, 5)\n",
     "        ]\n",
     "        \n",
@@ -307,28 +307,28 @@
     "        \n",
     "        self.hidden1_l = lasagne.layers.DenseLayer(\n",
     "            self.first_l_max,\n",
-    "            num_units=40,\n",
+    "            num_units=100,\n",
     "            name='dens1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.rectify,\n",
     "        )\n",
     "        \n",
     "        self.hidden1_l_drop = lasagne.layers.DropoutLayer(\n",
     "            self.hidden1_l,\n",
     "            name='drop1',\n",
-    "            p=.25,\n",
+    "            p=.4,\n",
     "        )\n",
     "        \n",
     "        self.hidden2_l = lasagne.layers.DenseLayer(\n",
     "            self.hidden1_l_drop,\n",
     "            num_units=15,\n",
     "            name='dens2',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "            nonlinearity=lasagne.nonlinearities.rectify,\n",
     "        )\n",
     "        \n",
     "        self.hidden2_l_drop = lasagne.layers.DropoutLayer(\n",
     "            self.hidden2_l,\n",
     "            name='drop2',\n",
-    "            p=.25,\n",
+    "            p=.4,\n",
     "        )\n",
     "        \n",
     "        self.out_l = lasagne.layers.DenseLayer(\n",
@@ -348,11 +348,11 @@
     "        \n",
     "        self.all_params = lasagne.layers.get_all_params(self.out_l)\n",
     "        \n",
-    "        self.updates = lasagne.updates.adagrad(self.loss_val, self.all_params, self.learning_rate)\n",
+    "        self.updates = lasagne.updates.adagrad(self.loss_val, self.all_params, self.learning_rate_var)\n",
     "        #self.updates = lasagne.updates.apply_momentum(self.updates_adagrad)\n",
     "        \n",
     "        self.train_func = theano.function(\n",
-    "            [self.x_batch, self.y_batch],\n",
+    "            [self.x_batch, self.y_batch, self.learning_rate_var],\n",
     "            [self.loss_vec.mean(), self.loss_vec],\n",
     "            updates=self.updates,\n",
     "        )\n",
@@ -372,8 +372,9 @@
     "                end = len(self.train_X_rep)\n",
     "            X_vals = np.array(self.train_X_rep[s:end]).astype('int32')\n",
     "            y_vals = np.array(self.train_Y[s:end]).astype('int32')\n",
-    "            loss, _ = self.train_func(X_vals, y_vals)\n",
+    "            loss, _ = self.train_func(X_vals, y_vals, self.learning_rate)\n",
     "            self._make_zero()\n",
+    "        self.learning_rate *= .9\n",
     "            \n",
     "    def test_loss(self, test_X, test_Y):\n",
     "        test_X_rep = np.array([self.wordvecs.tokenize(x) for x in test_X])\n",
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 166,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +442,8 @@
     {
      "data": {
       "text/plain": [
-       "[conv1.2.W,\n",
+       "[Embeddings,\n",
+       " conv1.2.W,\n",
        " conv1.2.b,\n",
        " conv1.3.W,\n",
        " conv1.3.b,\n",
@@ -453,7 +455,7 @@
        " dens3.b]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1.0606681182628814, 0.22975187265917604) (1.2688564461359229, 0.27520435967302453) (1.120131724683243, 0.24253393665158371)\n"
+      "(0.89615979832933435, 0.22975187265917604) (1.0330363530786211, 0.27520435967302453) (0.94304127539559712, 0.24253393665158371)\n"
      ]
     }
    ],
@@ -483,23 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(9, (0.62813345550790067, 0.20880149812734083), (0.67647587785555863, 0.39963669391462309))\n",
-      "(19, (0.5889986119092171, 0.098548689138576784), (0.66129864450633868, 0.34059945504087191))\n",
-      "(29, (0.58050994469403605, 0.076076779026217234), (0.6594850806378586, 0.34604904632152589))\n",
-      "(39, (0.57498347451479503, 0.059339887640449437), (0.66450718122265284, 0.36784741144414168))\n",
-      "(49, (0.56496353413845524, 0.048923220973782773), (0.65934541023835003, 0.34241598546775659))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_res = []\n",
     "\n",
@@ -513,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
@@ -521,10 +511,40 @@
     {
      "data": {
       "text/plain": [
-       "(0.56215729250109614, 0.14173689138576778)"
+       "[(9,\n",
+       "  (0.55020794281364249, 0.10978464419475656),\n",
+       "  (0.65562811134629828, 0.36693914623069934)),\n",
+       " (19,\n",
+       "  (0.51201664899245858, 0.052785580524344566),\n",
+       "  (0.64739200740079461, 0.35149863760217986)),\n",
+       " (29,\n",
+       "  (0.5054065906389118, 0.042017790262172283),\n",
+       "  (0.6474755629259733, 0.35422343324250682))]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.50608845147565162, 0.036867977528089887)"
+      ]
+     },
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -543,10 +563,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.65719801928959309, 0.35240690281562215)"
+       "(0.65052080853190586, 0.35331516802906449)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -565,10 +585,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.64638981333090362, 0.3357466063348416)"
+       "(0.64589608883271854, 0.3411764705882353)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,6 +596,15 @@
    "source": [
     "experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -811,18 +840,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.5"
   }
  },
  "nbformat": 4,
