--- a/queries test.ipynb
+++ b/queries test.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
        "8917"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -118,7 +118,7 @@
        "0.8993444276348966"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -153,6 +153,7 @@
     "    def __init__(self, wordvec=wordvectors, queries=queries):\n",
     "        self.wordvecs = wordvec\n",
     "        self.queries = queries\n",
+    "        self.num_words_to_use_conv = self.wordvecs.num_words_to_use\n",
     "        \n",
     "        self._setup()\n",
     "    \n",
@@ -175,7 +176,13 @@
     "        self.document_conv1_l = lasagne.layers.Conv2DLayer(\n",
     "            self.document_embedding_l,\n",
     "            num_filters=150,\n",
-    "            filter_size=()\n",
+    "            filter_size=(self.num_words_to_use_conv, self.wordvecs.vector_size),\n",
+    "            name='document_conv1',\n",
+    "            nonlinearity=lasagne.nonlinearities.rectify,\n",
+    "        )\n",
+    "        \n",
+    "        self.document_max_l = lasagne.layers.Pool2DLayer(\n",
+    "            \n",
     "        )\n",
     "        "
    ]
